# Online-Adaptive-Deep-Residual-Neural-Network

./: .gitignore  .pre-commit-config.yaml  README.md  config.json  data_manager.py  dynamics.py  entity.py  integrate.py  main.py  mypy.ini  neural_network.py  plotter.py  pyproject.toml  reference_config.json  requirements-def.txt  requirements-dev.txt  requirements.txt  test_simulation_runner.py  validate_acceptance_criteria.py  validate_new_structure.py
.github/workflows/: lint.yml  python-tests.yml  test.yml
configurations/: config.json  config_baseline.json  config_common.json  config_deep.json  config_proportional.json  config_resnet.json  config_shallow.json
src/core/: entity.py  neural_network.py
src/io/: data_manager.py
src/online_adaptive_resnet/: __init__.py  __main__.py
src/online_adaptive_resnet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/online_adaptive_resnet/cli/: main.py
src/online_adaptive_resnet/core/: __init__.py  entity.py  neural_network.py
src/online_adaptive_resnet/io/: __init__.py  config.py  data_manager.py
src/online_adaptive_resnet/visualization/: __init__.py  plotter.py
src/rnn_sim/: __init__.py  __main__.py
src/rnn_sim/apps/: __init__.py  main.py
src/rnn_sim/core/: __init__.py  dynamics.py  entity.py  integrate.py  neural_network.py
src/rnn_sim/io/: __init__.py  data_manager.py
src/rnn_sim/viz/: __init__.py  plotter.py
src/simulation/: dynamics.py  integrate.py
src/visualization/: plotter.py
tests/: README_TESTS.md  test_animation.py  test_batch_configuration.py  test_configuration_isolation.py  test_data_integrity.py  test_end_to_end_regression.py  test_end_to_end_simulation.py  test_integration.py  test_memory_optimization.py  test_plotting.py  test_resnet_reference.py  test_types.py
tests/integration/: __init__.py  test_tracking_error.py
