[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "online-adaptive-resnet"
version = "1.0.0"
description = "Online Adaptive Deep Residual Neural Network for Dynamical Systems"
readme = "README.md"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Cristian F. Nino", email = "cristian1928@ufl.edu"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "scienceplots",
]

[project.scripts]
online-adaptive-resnet = "online_adaptive_resnet.cli.main:main"

[project.urls]
Homepage = "https://github.com/cristian1928/Online-Adaptive-Deep-Residual-Neural-Network"
Repository = "https://github.com/cristian1928/Online-Adaptive-Deep-Residual-Neural-Network"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",   # pep8-naming
    "Q",   # flake8-quotes
]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true